--- a/Interface/bill.html
+++ b/Interface/bill.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SoPrompt Invoice View</title>
+    <title>SoPrompt Status View</title>
     <link rel="stylesheet" type="text/css" href="formstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
@@ -14,51 +14,37 @@
     </style>
 
     <script>
+        function check(){
+          $("#rid").empty();
+          $("#bill").empty();
+          $("#checkBill").show();
+          $("#viewBill").hide();
+        }
         //send comment to DB and update DOM on callback
         function sendForm() {
             //create data string
             var data = $('#toSend').serialize();
+            var rid = $("#repair").val();
+            $("#rid").empty();
+            $("#rid").append(rid);
             //send comment to DB
             $.ajax({
                 type: 'POST',
-                url: '',
+                url: 'bill.php',
                 data: data,
                 success: function(response) {
-                    if (response == "invalid") {
-                        $("#formAlert").show();
-                    } else if (response == "success") {
-                        $("#viewBill").hide();
-                        $("#viewBill").show();
-                    } else {
-                        alert(response);
+                  console.log(response+'3');
+                  console.log(response.length);
+                    if (response[0] == "C") {
+                      $("#checkBill").hide();
+                      $("#viewBill").show();
+                      $("#bill").append(response);
+                    }
+                    else {
+                      $("#formAlert").show();
                     }
                 }
             });
-        }
-
-        function updateCart(){
-          var toList="";
-          var dCost=0;
-          $("#cartSpace").empty();
-          if(count[0]){
-            toList += "<p><strong>"+count[0]+" Dixon Ticonderoga Pencil(s) for $0.99   </strong><button type='button' class='btn btn-xs' id='remove' onclick='removeCart(0)'>Remove</button></p>";
-          }
-          tCost=((count[0])*0.99)+((count[1])*1.99)+((count[2])*749.99)+((count[3])*79.99)+((count[4])*139.99)+((count[5])*119.99)+((count[6])*29.99);
-          $("#cartSpace").append(toList);
-          if(discount){
-            dCost=tCost;
-            dCost-=((tCost)*(0.15));
-            var toAddD="<br><br><p><strong>Subtotal: "+(tCost).toFixed(2)+"</strong></p><p>*Apply 15% off*</p><p><strong>Total: "+(dCost).toFixed(2)+"</strong></p>";
-            $('#total').val("");
-            $("#cartSpace").append(toAddD);
-            $('#total').val($('#total').val() + dCost);
-          }
-          else{
-            var toAdd="<br><br><p><strong>Total: "+(tCost).toFixed(2)+"</strong></p>";
-            $('#total').val("");
-            $("#cartSpace").append(toAdd);
-            $('#total').val($('#total').val() + tCost);
-          }
         }
 
     </script>
@@ -74,31 +60,35 @@
     </div>
 
     <div align="center" id="checkBill">
-        <h3>Enter Customer ID to view your bill!</h3>
+        <h3>Enter Repair ID to view Invoice</h3>
         <form id="toSend">
             <fieldset>
                 </br>
-                <input type="text" name="name" placeholder="Customer ID" required>
+                <input type="text" name="rid" id="repair" placeholder="Repair ID" required>
                 </br>
                 </br>
                 </br>
-                <input type="submit" value="Submit" onclick="sendForm()">
+                <input type="button" value="Submit" onclick="sendForm()">
             </fieldset>
         </form>
+        <div class="alert warning" id="formAlert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';" display='none'>&times;</span>
+            <strong>Warning!</strong> Something went wrong. Please check the info you added and try again.
+        </div>
     </div>
     <div align="center" id="viewBill">
         <h3>Here is your bill!</h3>
         <table style="width:100%">
             <tr>
-                <th>Customer ID</th>
-                <th>Contract ID</th>
-                <th>Cost</th>
+                <th>Repair ID</th>
+                <th></th>
             </tr>
-            <tr id="totalRow">
-                <td colspan="2"><b>Total:</b></td>
-                <td id="total"></td>
+            <tr>
+                <td id='rid'></td>
+                <td id='bill'></td>
             </tr>
         </table>
+        <input type="button" value="Check Another" onclick="check()">
     </div>
 
 </body>
