--- a/Interface/revenue.html
+++ b/Interface/revenue.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SoPrompt Invoice View</title>
+    <title>SoPrompt Revenue View</title>
     <link rel="stylesheet" type="text/css" href="formstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
@@ -14,51 +14,43 @@
     </style>
 
     <script>
+        function check(){
+          $("#sd").empty();
+          $("#ed").empty();
+          $("#bill").empty();
+          $("#checkBill").show();
+          $("#viewBill").hide();
+        }
         //send comment to DB and update DOM on callback
         function sendForm() {
             //create data string
             var data = $('#toSend').serialize();
+            var d1 = $("#sDate").val();
+            var d2 = $("#endDate").val();
+            console.log("hello");
+            $("#sd").empty();
+            $("#sd").append(d1);
+            $("#ed").empty();
+            $("#ed").append(d2);
+            console.log(d1);
+            console.log(d2);
             //send comment to DB
             $.ajax({
                 type: 'POST',
-                url: '',
+                url: 'revenue.php',
                 data: data,
                 success: function(response) {
-                    if (response == "invalid") {
-                        $("#formAlert").show();
-                    } else if (response == "success") {
-                        $("#viewBill").hide();
-                        $("#viewBill").show();
-                    } else {
-                        alert(response);
-                    }
+                  console.log("hi");
+                  if (response == "invalid") {
+                      $("#formAlert").show();
+                  }
+                  else {
+                      $("#bill").append(response);
+                      $("#checkBill").hide();
+                      $("#viewBill").show();
+                  }
                 }
             });
-        }
-
-        function updateCart(){
-          var toList="";
-          var dCost=0;
-          $("#cartSpace").empty();
-          if(count[0]){
-            toList += "<p><strong>"+count[0]+" Dixon Ticonderoga Pencil(s) for $0.99   </strong><button type='button' class='btn btn-xs' id='remove' onclick='removeCart(0)'>Remove</button></p>";
-          }
-          tCost=((count[0])*0.99)+((count[1])*1.99)+((count[2])*749.99)+((count[3])*79.99)+((count[4])*139.99)+((count[5])*119.99)+((count[6])*29.99);
-          $("#cartSpace").append(toList);
-          if(discount){
-            dCost=tCost;
-            dCost-=((tCost)*(0.15));
-            var toAddD="<br><br><p><strong>Subtotal: "+(tCost).toFixed(2)+"</strong></p><p>*Apply 15% off*</p><p><strong>Total: "+(dCost).toFixed(2)+"</strong></p>";
-            $('#total').val("");
-            $("#cartSpace").append(toAddD);
-            $('#total').val($('#total').val() + dCost);
-          }
-          else{
-            var toAdd="<br><br><p><strong>Total: "+(tCost).toFixed(2)+"</strong></p>";
-            $('#total').val("");
-            $("#cartSpace").append(toAdd);
-            $('#total').val($('#total').val() + tCost);
-          }
         }
 
     </script>
@@ -68,24 +60,45 @@
 
     <div id="topbar">
         <h2>SoPrompt Services, Inc. </h2>
-        <h1>View Invoice</h1>
+        <h1>Total Revenue</h1>
 
 
     </div>
 
-    <div align="center" id="viewRev">
-        <h3>Here is your bill!</h3>
+    <div align="center" id="checkBill">
+        <h3>Choose a timeframe to see total revenue</h3>
+        <form id="toSend">
+            <fieldset>
+                </br>
+                Start Date: <input type="date" name="sDate" id="sDate" required>
+                </br>
+                </br>
+                End Date: <input type="date" name="endDate" id="endDate" required>
+                </br>
+                <input type="button" value="Submit" onclick="sendForm()">
+            </fieldset>
+        </form>
+        <div class="alert warning" id="formAlert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';" display='none'>&times;</span>
+            <strong>Warning!</strong> Something went wrong. Please check the info you added and try again.
+        </div>
+    </div>
+    <div align="center" id="viewBill">
+        <h3>Here is the revenue between those dates!</h3>
         <table style="width:100%">
             <tr>
-                <th>Customer ID</th>
-                <th>Contract ID</th>
-                <th>Cost</th>
+                <th>Start-End Date</th>
+                <th></th>
             </tr>
-            <tr id="totalRow">
-                <td colspan="2"><b>Total:</b></td>
-                <td id="total"></td>
+            <tr>
+                <td id='sd'></td>
+                <td id='bill' rowspan='2'></td>
+            </tr>
+            <tr>
+                <td id='ed'></td>
             </tr>
         </table>
+        <input type="button" value="Check Another" onclick="check()">
     </div>
 
 </body>
