--- a/Interface/status.html
+++ b/Interface/status.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SoPrompt Invoice View</title>
+    <title>SoPrompt Status View</title>
     <link rel="stylesheet" type="text/css" href="formstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
@@ -14,51 +14,49 @@
     </style>
 
     <script>
+        function check(){
+          $("#mid").empty();
+          $("#stat").empty();
+          $("#checkBill").show();
+          $("#viewBill").hide();
+        }
         //send comment to DB and update DOM on callback
         function sendForm() {
             //create data string
             var data = $('#toSend').serialize();
+            var mid = $("#pid").val();
+            $("#mid").append(mid);
             //send comment to DB
             $.ajax({
                 type: 'POST',
-                url: '',
+                url: 'status.php',
                 data: data,
                 success: function(response) {
                     if (response == "invalid") {
                         $("#formAlert").show();
-                    } else if (response == "success") {
-                        $("#viewBill").hide();
-                        $("#viewBill").show();
-                    } else {
-                        alert(response);
+                    }
+                    else {
+                      var col=response.indexOf(':');
+                      $("#checkBill").hide();
+                      $("#viewBill").show();
+                      if(response[col+2]==String(1)){
+                        $("#stat").append("Not Ready");
+                      }
+                      else if(response[col+2]==String(2)){
+                        $("#stat").append("Parts are ordered");
+                      }
+                      else if(response[col+2]==String(3)){
+                        $("#stat").append("Ready");
+                      }
+                      else if(response[col+2]==String(4)){
+                        $("#stat").append("Delivered");
+                      }
+                      else{
+                        $("#stat").append("ID is not in records; no status");
+                      }
                     }
                 }
             });
-        }
-
-        function updateCart(){
-          var toList="";
-          var dCost=0;
-          $("#cartSpace").empty();
-          if(count[0]){
-            toList += "<p><strong>"+count[0]+" Dixon Ticonderoga Pencil(s) for $0.99   </strong><button type='button' class='btn btn-xs' id='remove' onclick='removeCart(0)'>Remove</button></p>";
-          }
-          tCost=((count[0])*0.99)+((count[1])*1.99)+((count[2])*749.99)+((count[3])*79.99)+((count[4])*139.99)+((count[5])*119.99)+((count[6])*29.99);
-          $("#cartSpace").append(toList);
-          if(discount){
-            dCost=tCost;
-            dCost-=((tCost)*(0.15));
-            var toAddD="<br><br><p><strong>Subtotal: "+(tCost).toFixed(2)+"</strong></p><p>*Apply 15% off*</p><p><strong>Total: "+(dCost).toFixed(2)+"</strong></p>";
-            $('#total').val("");
-            $("#cartSpace").append(toAddD);
-            $('#total').val($('#total').val() + dCost);
-          }
-          else{
-            var toAdd="<br><br><p><strong>Total: "+(tCost).toFixed(2)+"</strong></p>";
-            $('#total').val("");
-            $("#cartSpace").append(toAdd);
-            $('#total').val($('#total').val() + tCost);
-          }
         }
 
     </script>
@@ -68,37 +66,41 @@
 
     <div id="topbar">
         <h2>SoPrompt Services, Inc. </h2>
-        <h1>View Invoice</h1>
+        <h1>View Status</h1>
 
 
     </div>
 
     <div align="center" id="checkBill">
-        <h3>Enter Customer ID to view your bill!</h3>
+        <h3>Enter Product ID to view its status!</h3>
         <form id="toSend">
             <fieldset>
                 </br>
-                <input type="text" name="name" placeholder="Customer ID" required>
+                <input type="text" name="pid" id="pid" placeholder="Product ID" required>
                 </br>
                 </br>
                 </br>
-                <input type="submit" value="Submit" onclick="sendForm()">
+                <input type="button" value="Submit" onclick="sendForm()">
             </fieldset>
         </form>
+        <div class="alert warning" id="formAlert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';" display='none'>&times;</span>
+            <strong>Warning!</strong> Something went wrong. Please check the info you added and try again.
+        </div>
     </div>
     <div align="center" id="viewBill">
-        <h3>Here is your bill!</h3>
+        <h3>Here is the status of your machine!</h3>
         <table style="width:100%">
             <tr>
-                <th>Customer ID</th>
-                <th>Contract ID</th>
-                <th>Cost</th>
+                <th>Machine ID</th>
+                <th>Status</th>
             </tr>
-            <tr id="totalRow">
-                <td colspan="2"><b>Total:</b></td>
-                <td id="total"></td>
+            <tr>
+                <td id='mid'></td>
+                <td id='stat'></td>
             </tr>
         </table>
+        <input type="button" value="Check Another" onclick="check()">
     </div>
 
 </body>
