--- a/Interface/register.html
+++ b/Interface/register.html
@@ -116,8 +116,8 @@
         <div id="custInfo">
           Your Customer ID is:  <input type="text" name="customer" id="customer" disabled>
           </br>
-          Your Service Id is:   <input type="text" name="contract" id="contract" disabled>
-        <div>
+          Your Service ID is:   <input type="text" name="contract" id="contract" disabled>
+        </div>
     </div>
 </body>
 
